# build_system_tests

./: .gitignore  CMakeLists.txt  README.md  build-all-cached.nu  build-all.bat  build-all.nu  build-all.ps1  build.zig  common.nu
stowy_physics_engine/: CMakeLists.txt  build-cached.nu  build.bat  build.nu  build.ps1
stowy_physics_engine/src/: Transform.hpp  defines.hpp
stowy_physics_engine/src/collision/: BroadPhaseGrid.cpp  BroadPhaseGrid.hpp  Collider.hpp  Collision.hpp  CollisionBody.hpp  CollisionWorld.hpp  Edge.hpp  Manifold.hpp  ManifoldFactory.hpp  Projection.hpp  Simplex.hpp
stowy_physics_engine/src/dynamics/: DynamicsWorld.hpp  Rigidbody.cpp  Rigidbody.hpp  Solver.hpp
stowy_physics_engine/src/math/: Vector2.cpp  Vector2.hpp
testbed/: CMakeLists.txt  build-cached.nu  build.bat  build.nu  build.ps1
testbed/src/: main.cpp
